hphp/test/zend/bad/ns_082.php
<?php
namespace foo {
}
namespace ok {
echo "ok\n";
}
?>